mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/globalFunctions/erc7201_builtin_abi_encode_comptime.sol
contract C layout at erc7201(string(abi.encodePacked(bytes32(uint256(2))))) {}
// ----
// TypeError 1505: (21-75): The base slot expression contains elements that are not yet supported by the internal constant evaluator and therefore cannot be evaluated at compilation time.
